Update for sentry

--- a/.env.example
+++ b/.env.example
@@ -1,2 +1,5 @@
-# Sentry DSN for logging
-SENTRY_DSN
+# Sentry configuration
+SENTRY_DSN="https://...@....ingest.sentry.io/..."
+SENTRY_AUTH="sntrys_...."
+SENTRY_ORG="your_org_name"
+SENTRY_PROJECT="your_project_name"
