--- a/.env.example
+++ b/.env.example
@@ -1,5 +1,5 @@
 # Sentry configuration
-SENTRY_DSN="https://...@....ingest.sentry.io/..."
+PUBLIC_SENTRY_DSN="https://...@....ingest.sentry.io/..."
 SENTRY_AUTH="sntrys_...."
 SENTRY_ORG="your_org_name"
 SENTRY_PROJECT="your_project_name"
