Add basic auth for no reason

--- a/.env.example
+++ b/.env.example
@@ -3,3 +3,10 @@ PUBLIC_SENTRY_DSN="https://...@....ingest.sentry.io/..."
 SENTRY_AUTH="sntrys_...."
 SENTRY_ORG="your_org_name"
 SENTRY_PROJECT="your_project_name"
+
+# DB
+DATABASE_URL='yourmysqldbstring'
+
+# Google OAuth
+GOOGLE_CLIENT_ID='.apps.googleusercontent.com'
+GOOGLE_CLIENT_SECRET=''
