--- a/package.json
+++ b/package.json
@@ -48,6 +48,9 @@
 	},
 	"type": "module",
 	"dependencies": {
-		"@sentry/sveltekit": "^7.65.0"
+		"@auth/core": "^0.15.0",
+		"@auth/sveltekit": "^0.3.7",
+		"@sentry/sveltekit": "^7.65.0",
+		"mysql2": "^3.6.1"
 	}
 }
