--- a/.env.example
+++ b/.env.example
@@ -4,9 +4,7 @@ SENTRY_AUTH="sntrys_...."
 SENTRY_ORG="your_org_name"
 SENTRY_PROJECT="your_project_name"
 
-# DB
-DATABASE_URL='yourmysqldbstring'
-
-# Google OAuth
-GOOGLE_CLIENT_ID='.apps.googleusercontent.com'
-GOOGLE_CLIENT_SECRET=''
+# Pocketbase BaaS
+PUBLIC_POCKETBASE_URL="https://my-app.pockethost.io"
+# Used for OAuth callbacks
+PUBLIC_HOST_URL="http://localhost:5173
