--- a/package.json
+++ b/package.json
@@ -22,9 +22,11 @@
 	},
 	"devDependencies": {
 		"@playwright/test": "^1.37.1",
+		"@sveltejs/adapter-cloudflare": "^2.3.3",
 		"@sveltejs/adapter-vercel": "^2.4.3",
 		"@sveltejs/kit": "^1.20.4",
 		"@types/lodash-es": "^4.17.8",
+		"@types/uuid": "^9.0.7",
 		"@typescript-eslint/eslint-plugin": "^5.45.0",
 		"@typescript-eslint/parser": "^5.45.0",
 		"autoprefixer": "^10.4.15",
@@ -51,6 +53,7 @@
 		"@sentry/sveltekit": "^7.65.0",
 		"jdenticon": "^3.2.0",
 		"mysql2": "^3.6.1",
-		"pocketbase": "^0.18.2"
+		"pocketbase": "^0.18.2",
+		"uuid": "^9.0.1"
 	}
 }
