--- a/package.json
+++ b/package.json
@@ -51,7 +51,7 @@
 	},
 	"type": "module",
 	"dependencies": {
-		"@sentry/svelte": "^7.80.1",
+		"@sentry/browser": "^7.86.0",
 		"jdenticon": "^3.2.0",
 		"mysql2": "^3.6.1",
 		"pocketbase": "^0.18.2",
