--- a/package.json
+++ b/package.json
@@ -47,12 +47,14 @@
 		"ts-node": "^10.9.1",
 		"tslib": "^2.4.1",
 		"typescript": "^5.2.2",
-		"vite": "^5.0.0",
+		"vite": "^5.0.12",
 		"vitest": "^1.0.0"
 	},
 	"type": "module",
 	"dependencies": {
+		"@jill64/sentry-sveltekit-cloudflare": "^1.7.2",
 		"@sentry/browser": "^7.86.0",
+		"@sentry/integrations": "^7.94.1",
 		"jdenticon": "^3.2.0",
 		"mysql2": "^3.6.1",
 		"pocketbase": "^0.18.2",
