--- a/.github/workflows/testing.yml
+++ b/.github/workflows/testing.yml
@@ -32,6 +32,7 @@ jobs:
           PUBLIC_AXIOM_TOKEN: ''
           PUBLIC_AXIOM_DATASET: ''
           PERSPECTIVES_API_KEY: ''
+          PUBLIC_ENVIRONMENT: 'e2e'
       - uses: actions/upload-artifact@v3
         if: always()
         with:
