--- a/package.json
+++ b/package.json
@@ -25,13 +25,14 @@
 		"@playwright/test": "^1.37.1",
 		"@sveltejs/adapter-cloudflare": "^3.0.1",
 		"@sveltejs/adapter-vercel": "^4.0.0",
-		"@sveltejs/kit": "^2.0.0",
+		"@sveltejs/kit": "^2.5.0",
 		"@sveltejs/vite-plugin-svelte": "^3.0.0",
 		"@types/lodash-es": "^4.17.8",
 		"@types/uuid": "^9.0.7",
 		"@typescript-eslint/eslint-plugin": "^5.45.0",
 		"@typescript-eslint/parser": "^5.45.0",
 		"autoprefixer": "^10.4.15",
+		"cheerio": "^1.0.0-rc.12",
 		"convert-svg-to-png": "^0.6.4",
 		"eslint": "^8.28.0",
 		"eslint-config-prettier": "^8.5.0",
@@ -42,6 +43,7 @@
 		"postcss": "^8.4.28",
 		"prettier": "^2.8.0",
 		"prettier-plugin-svelte": "^2.10.1",
+		"save-svg-as-png": "^1.4.17",
 		"svelte": "^4.0.5",
 		"svelte-check": "^3.4.3",
 		"tailwindcss": "^3.3.3",
