--- a/package.json
+++ b/package.json
@@ -33,7 +33,6 @@
 		"@typescript-eslint/parser": "^5.45.0",
 		"autoprefixer": "^10.4.15",
 		"cheerio": "^1.0.0-rc.12",
-		"convert-svg-to-png": "^0.6.4",
 		"eslint": "^8.28.0",
 		"eslint-config-prettier": "^8.5.0",
 		"eslint-plugin-svelte": "^2.30.0",
@@ -44,6 +43,7 @@
 		"prettier": "^2.8.0",
 		"prettier-plugin-svelte": "^2.10.1",
 		"save-svg-as-png": "^1.4.17",
+		"sharp": "^0.33.2",
 		"svelte": "^4.0.5",
 		"svelte-check": "^3.4.3",
 		"tailwindcss": "^3.3.3",
