--- a/package.json
+++ b/package.json
@@ -43,7 +43,6 @@
 		"prettier": "^2.8.0",
 		"prettier-plugin-svelte": "^2.10.1",
 		"save-svg-as-png": "^1.4.17",
-		"sharp": "^0.33.2",
 		"svelte": "^4.0.5",
 		"svelte-check": "^3.4.3",
 		"tailwindcss": "^3.3.3",
@@ -61,6 +60,7 @@
 		"jdenticon": "^3.2.0",
 		"mysql2": "^3.6.1",
 		"pocketbase": "^0.18.2",
-		"uuid": "^9.0.1"
+		"uuid": "^9.0.1",
+		"sharp": "^0.33.2"
 	}
 }
