--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
 		"scrape:pokemon": "node ./src/build/scrapers/pokemon.js"
 	},
 	"devDependencies": {
+		"@cloudflare/workers-types": "^4.20240208.0",
 		"@playwright/test": "^1.37.1",
 		"@sveltejs/adapter-cloudflare": "^3.0.1",
 		"@sveltejs/adapter-vercel": "^4.0.0",
@@ -43,12 +44,13 @@
 		"prettier": "^2.8.0",
 		"prettier-plugin-svelte": "^2.10.1",
 		"save-svg-as-png": "^1.4.17",
+		"sharp": "^0.33.2",
 		"svelte": "^4.0.5",
 		"svelte-check": "^3.4.3",
 		"tailwindcss": "^3.3.3",
 		"ts-node": "^10.9.1",
 		"tslib": "^2.4.1",
-		"typescript": "^5.2.2",
+		"typescript": "^5.3.3",
 		"vite": "^5.0.12",
 		"vitest": "^1.0.0"
 	},
@@ -60,7 +62,6 @@
 		"jdenticon": "^3.2.0",
 		"mysql2": "^3.6.1",
 		"pocketbase": "^0.18.2",
-		"uuid": "^9.0.1",
-		"sharp": "^0.33.2"
+		"uuid": "^9.0.1"
 	}
 }
