--- a/.prettierignore
+++ b/.prettierignore
@@ -6,6 +6,10 @@ node_modules
 .env
 .env.*
 !.env.example
+.vercel
+.postcss.config.js
+*.json
+vite.*
 
 # Ignore files for PNPM, NPM and YARN
 pnpm-lock.yaml
