Fix builds Update docs Fix linting complaints

--- a/.env.example
+++ b/.env.example
@@ -9,3 +9,13 @@ PUBLIC_POCKETBASE_URL="https://my-app.pockethost.io"
 
 # Perspectives API Key as set up in GCP
 PERSPECTIVES_API_KEY=""
+
+# Axiom config
+PUBLIC_AXIOM_TOKEN=uuid_api_token
+PUBLIC_AXIOM_DATASET=your_data_bucket_name
+
+# Make app aware of its deployment location
+PUBLIC_ENVIRONMENT=local|preview|production
+
+# This user should have tags linked to it - used for the Homepage samples
+ADMIN_EMAIL=your_user@domain.com
