Replace Axiom with New Relic
And redo logging

--- a/.env.example
+++ b/.env.example
@@ -10,12 +10,16 @@ PUBLIC_POCKETBASE_URL="https://my-app.pockethost.io"
 # Perspectives API Key as set up in GCP
 PERSPECTIVES_API_KEY=""
 
-# Axiom config
-PUBLIC_AXIOM_TOKEN=uuid_api_token
-PUBLIC_AXIOM_DATASET=your_data_bucket_name
-
 # Make app aware of its deployment location
 PUBLIC_ENVIRONMENT=local|preview|production
 
 # This user should have tags linked to it - used for the Homepage samples
 ADMIN_EMAIL=your_user@domain.com
+
+# New Relic settings
+NEW_RELIC_APP_NAME=your_app_name
+NEW_RELIC_LICENSE_KEY=full_license_key-not_api
+NEW_RELIC_ACCOUNT_ID=numerical_account_id
+
+# Allow client side code to send server side custom NR events
+PUBLIC_LOGGING_API_KEY=c5afd37d-d17b-4561-8177-0f18fadc01e1
