--- a/package.json
+++ b/package.json
@@ -24,6 +24,7 @@
 		"@sveltejs/adapter-vercel": "^4.0.0",
 		"@sveltejs/kit": "^2.5.0",
 		"@sveltejs/vite-plugin-svelte": "^3.0.0",
+		"@testing-library/svelte": "^5.1.0",
 		"@types/lodash-es": "^4.17.8",
 		"@types/pako": "^2.0.3",
 		"@types/uuid": "^9.0.7",
@@ -34,7 +35,10 @@
 		"eslint-config-prettier": "^8.5.0",
 		"eslint-plugin-svelte": "^2.30.0",
 		"esm": "^3.2.25",
+		"jest-dom": "^4.0.0",
+		"jsdom": "^24.0.0",
 		"lodash-es": "^4.17.21",
+		"msw": "^2.2.14",
 		"node-fetch": "^3.3.2",
 		"postcss": "^8.4.28",
 		"prettier": "^2.8.0",
