--- a/package.json
+++ b/package.json
@@ -15,7 +15,8 @@
 		"format": "prettier --plugin-search-dir . --write .",
 		"test:integration": "playwright test",
 		"test:integration-ui": "playwright test --ui",
-		"test:unit": "vitest"
+		"test:unit": "vitest",
+		"test:unit:watch": "vitest --watch"
 	},
 	"devDependencies": {
 		"@cloudflare/workers-types": "^4.20240208.0",
