--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
 		"check:watch": "svelte-kit sync && svelte-check --tsconfig ./tsconfig.json --watch",
 		"lint": "prettier --plugin-search-dir . --check . && eslint .",
 		"format": "prettier --plugin-search-dir . --write .",
+		"scripts:legends-sprites": "node scripts/manual-sprites/legends-script.js",
 		"scripts:sv-sprites": "node scripts/manual-sprites/sv-script.js",
 		"test:integration": "playwright test",
 		"test:integration-ui": "playwright test --ui",
