--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
 		"lint": "prettier --plugin-search-dir . --check . && eslint .",
 		"format": "prettier --plugin-search-dir . --write .",
 		"scripts:legends-sprites": "node scripts/manual-sprites/legends-script.js",
+		"scripts:swsh-sprites": "node scripts/manual-sprites/swsh-script.js",
 		"scripts:sv-sprites": "node scripts/manual-sprites/sv-script.js",
 		"test:integration": "playwright test",
 		"test:integration-ui": "playwright test --ui",
