--- a/.github/workflows/testing.yml
+++ b/.github/workflows/testing.yml
@@ -5,41 +5,41 @@ on:
   pull_request:
     branches: [main]
 jobs:
-  e2e:
-    timeout-minutes: 60
-    runs-on: ubuntu-latest
-    env:
-      PUBLIC_SENTRY_DSN: ''
-    steps:
-      - uses: actions/checkout@v3
-      - uses: actions/setup-node@v3
-        with:
-          node-version: 20
-      - name: Install dependencies
-        run: npm install
-      - name: Install Playwright Browsers
-        run: npx playwright install --with-deps
-      - name: Run Playwright tests
-        run: npm run test:integration
-        env:
-          PUBLIC_SENTRY_DSN: ''
-          SENTRY_AUTH: ''
-          SENTRY_AUTH_TOKEN: ''
-          SENTRY_ORG: ''
-          SENTRY_PROJECT: ''
-          PUBLIC_POCKETBASE_URL: 'http://pocketbase.aws.helbling.uk'
-          PERSPECTIVES_API_KEY: ''
-          PUBLIC_ENVIRONMENT: 'e2e'
-          PUBLIC_LOGGING_API_KEY: ''
-          NEW_RELIC_APP_NAME: ''
-          NEW_RELIC_LICENSE_KEY: ''
-          NEW_RELIC_ACCOUNT_ID: ''
-      - uses: actions/upload-artifact@v3
-        if: always()
-        with:
-          name: playwright-report
-          path: playwright-report/
-          retention-days: 30
+  # e2e:
+  #   timeout-minutes: 60
+  #   runs-on: ubuntu-latest
+  #   env:
+  #     PUBLIC_SENTRY_DSN: ''
+  #   steps:
+  #     - uses: actions/checkout@v3
+  #     - uses: actions/setup-node@v3
+  #       with:
+  #         node-version: 20
+  #     - name: Install dependencies
+  #       run: npm install
+  #     - name: Install Playwright Browsers
+  #       run: npx playwright install --with-deps
+  #     - name: Run Playwright tests
+  #       run: npm run test:integration
+  #       env:
+  #         PUBLIC_SENTRY_DSN: ''
+  #         SENTRY_AUTH: ''
+  #         SENTRY_AUTH_TOKEN: ''
+  #         SENTRY_ORG: ''
+  #         SENTRY_PROJECT: ''
+  #         PUBLIC_POCKETBASE_URL: 'http://pocketbase.aws.helbling.uk'
+  #         PERSPECTIVES_API_KEY: ''
+  #         PUBLIC_ENVIRONMENT: 'e2e'
+  #         PUBLIC_LOGGING_API_KEY: ''
+  #         NEW_RELIC_APP_NAME: ''
+  #         NEW_RELIC_LICENSE_KEY: ''
+  #         NEW_RELIC_ACCOUNT_ID: ''
+  #     - uses: actions/upload-artifact@v3
+  #       if: always()
+  #       with:
+  #         name: playwright-report
+  #         path: playwright-report/
+  #         retention-days: 30
   unit:
     runs-on: ubuntu-latest
     steps:
