--- a/package.json
+++ b/package.json
@@ -1,71 +1,84 @@
 {
-	"name": "pokemon-svelte",
-	"version": "0.0.1",
-	"private": true,
-	"scripts": {
-		"dev": "vite dev",
-		"build": "npm run build:app",
-		"build:assets": "node scripts/socialpreviews/socialGenerator.js",
-		"build:app": "vite build",
-		"preview": "vite preview",
-		"test": "npm run test:integration && npm run test:unit",
-		"check": "svelte-kit sync && svelte-check --tsconfig ./tsconfig.json",
-		"check:watch": "svelte-kit sync && svelte-check --tsconfig ./tsconfig.json --watch",
-		"lint": "prettier --plugin-search-dir . --check . && eslint .",
-		"format": "prettier --plugin-search-dir . --write .",
-		"scripts:legends-sprites": "node scripts/manual-sprites/legends-script.js",
-		"scripts:swsh-sprites": "node scripts/manual-sprites/swsh-script.js",
-		"scripts:sv-sprites": "node scripts/manual-sprites/sv-script.js",
-		"test:integration": "playwright test",
-		"test:integration-ui": "playwright test --ui",
-		"test:unit": "vitest",
-		"test:unit:watch": "vitest --watch"
-	},
-	"devDependencies": {
-		"@cloudflare/workers-types": "^4.20240208.0",
-		"@playwright/test": "^1.37.1",
-		"@sveltejs/adapter-cloudflare": "^3.0.1",
-		"@sveltejs/adapter-vercel": "^4.0.0",
-		"@sveltejs/kit": "^2.5.0",
-		"@sveltejs/vite-plugin-svelte": "^3.0.0",
-		"@testing-library/svelte": "^5.1.0",
-		"@types/lodash-es": "^4.17.8",
-		"@types/pako": "^2.0.3",
-		"@types/uuid": "^9.0.7",
-		"@typescript-eslint/eslint-plugin": "^5.45.0",
-		"@typescript-eslint/parser": "^5.45.0",
-		"autoprefixer": "^10.4.15",
-		"eslint": "^8.28.0",
-		"eslint-config-prettier": "^8.5.0",
-		"eslint-plugin-svelte": "^2.30.0",
-		"esm": "^3.2.25",
-		"jest-dom": "^4.0.0",
-		"jsdom": "^24.0.0",
-		"lodash-es": "^4.17.21",
-		"msw": "^2.2.14",
-		"node-fetch": "^3.3.2",
-		"postcss": "^8.4.28",
-		"prettier": "^2.8.0",
-		"prettier-plugin-svelte": "^2.10.1",
-		"save-svg-as-png": "^1.4.17",
-		"sharp": "^0.33.2",
-		"svelte": "^4.0.5",
-		"svelte-check": "^3.4.3",
-		"tailwindcss": "^3.3.3",
-		"ts-node": "^10.9.1",
-		"tslib": "^2.4.1",
-		"typescript": "^5.3.3",
-		"vite": "^5.0.12",
-		"vitest": "^1.0.0"
-	},
-	"type": "module",
-	"dependencies": {
-		"@jill64/sentry-sveltekit-cloudflare": "^1.7.2",
-		"@sentry/browser": "^7.86.0",
-		"@sentry/integrations": "^7.94.1",
-		"jdenticon": "^3.2.0",
-		"pako": "^2.1.0",
-		"pocketbase": "^0.18.2",
-		"uuid": "^9.0.1"
-	}
+  "name": "pokemon-svelte",
+  "version": "0.0.1",
+  "private": true,
+  "scripts": {
+    "dev": "vite dev",
+    "build": "npm run build:app",
+    "build:assets": "node scripts/socialpreviews/socialGenerator.js",
+    "build:app": "vite build",
+    "preview": "vite preview",
+    "test": "npm run test:integration && npm run test:unit",
+    "check": "svelte-kit sync && svelte-check --tsconfig ./tsconfig.json",
+    "check:watch": "svelte-kit sync && svelte-check --tsconfig ./tsconfig.json --watch",
+    "lint": "prettier --plugin-search-dir . --check . && eslint .",
+    "format": "prettier --plugin-search-dir . --write .",
+    "scripts:legends-sprites": "node scripts/manual-sprites/legends-script.js",
+    "scripts:swsh-sprites": "node scripts/manual-sprites/swsh-script.js",
+    "scripts:sv-sprites": "node scripts/manual-sprites/sv-script.js",
+    "test:integration": "playwright test",
+    "test:integration-ui": "playwright test --ui",
+    "test:unit": "vitest",
+    "test:unit:watch": "vitest --watch",
+    "storybook": "storybook dev -p 6006",
+    "build-storybook": "storybook build"
+  },
+  "devDependencies": {
+    "@chromatic-com/storybook": "^1.6.1",
+    "@cloudflare/workers-types": "^4.20240208.0",
+    "@playwright/test": "^1.37.1",
+    "@storybook/addon-essentials": "^8.2.2",
+    "@storybook/addon-interactions": "^8.2.2",
+    "@storybook/addon-links": "^8.2.2",
+    "@storybook/addon-svelte-csf": "^4.1.4",
+    "@storybook/blocks": "^8.2.2",
+    "@storybook/svelte": "^8.2.2",
+    "@storybook/sveltekit": "^8.2.2",
+    "@storybook/test": "^8.2.2",
+    "@sveltejs/adapter-cloudflare": "^3.0.1",
+    "@sveltejs/adapter-vercel": "^4.0.0",
+    "@sveltejs/kit": "^2.5.0",
+    "@sveltejs/vite-plugin-svelte": "^3.0.0",
+    "@testing-library/svelte": "^5.1.0",
+    "@types/lodash-es": "^4.17.8",
+    "@types/pako": "^2.0.3",
+    "@types/uuid": "^9.0.7",
+    "@typescript-eslint/eslint-plugin": "^5.45.0",
+    "@typescript-eslint/parser": "^5.45.0",
+    "autoprefixer": "^10.4.15",
+    "eslint": "^8.28.0",
+    "eslint-config-prettier": "^8.5.0",
+    "eslint-plugin-storybook": "^0.8.0",
+    "eslint-plugin-svelte": "^2.30.0",
+    "esm": "^3.2.25",
+    "jest-dom": "^4.0.0",
+    "jsdom": "^24.0.0",
+    "lodash-es": "^4.17.21",
+    "msw": "^2.2.14",
+    "node-fetch": "^3.3.2",
+    "postcss": "^8.4.28",
+    "prettier": "^2.8.0",
+    "prettier-plugin-svelte": "^2.10.1",
+    "save-svg-as-png": "^1.4.17",
+    "sharp": "^0.33.2",
+    "storybook": "^8.2.2",
+    "svelte": "^4.0.5",
+    "svelte-check": "^3.4.3",
+    "tailwindcss": "^3.3.3",
+    "ts-node": "^10.9.1",
+    "tslib": "^2.4.1",
+    "typescript": "^5.3.3",
+    "vite": "^5.0.12",
+    "vitest": "^1.0.0"
+  },
+  "type": "module",
+  "dependencies": {
+    "@jill64/sentry-sveltekit-cloudflare": "^1.7.2",
+    "@sentry/browser": "^7.86.0",
+    "@sentry/integrations": "^7.94.1",
+    "jdenticon": "^3.2.0",
+    "pako": "^2.1.0",
+    "pocketbase": "^0.18.2",
+    "uuid": "^9.0.1"
+  }
 }
