--- a/package.json
+++ b/package.json
@@ -31,6 +31,7 @@
     "@storybook/addon-interactions": "^8.2.2",
     "@storybook/addon-links": "^8.2.2",
     "@storybook/addon-svelte-csf": "^4.1.4",
+    "@storybook/addon-themes": "^8.2.2",
     "@storybook/blocks": "^8.2.2",
     "@storybook/svelte": "^8.2.2",
     "@storybook/sveltekit": "^8.2.2",
@@ -57,6 +58,7 @@
     "msw": "^2.2.14",
     "node-fetch": "^3.3.2",
     "postcss": "^8.4.28",
+    "postcss-nesting": "^12.1.5",
     "prettier": "^2.8.0",
     "prettier-plugin-svelte": "^2.10.1",
     "save-svg-as-png": "^1.4.17",
