--- a/package.json
+++ b/package.json
@@ -2,6 +2,9 @@
   "name": "pokemon-svelte",
   "version": "0.0.1",
   "private": true,
+  "engines": {
+    "node": "18.17.1"
+  },
   "scripts": {
     "dev": "vite dev",
     "build": "npm run build:app",
