--- a/package.json
+++ b/package.json
@@ -81,6 +81,7 @@
     "@jill64/sentry-sveltekit-cloudflare": "^1.7.2",
     "@sentry/browser": "^7.86.0",
     "@sentry/integrations": "^7.94.1",
+    "@storybook/addon-styling": "^1.3.7",
     "jdenticon": "^3.2.0",
     "pako": "^2.1.0",
     "pocketbase": "^0.18.2",
