--- a/package.json
+++ b/package.json
@@ -3,7 +3,8 @@
   "version": "0.0.1",
   "private": true,
   "engines": {
-    "node": "18.17.1"
+    "node": "18.17.1",
+    "npm": "9.6.7"
   },
   "scripts": {
     "dev": "vite dev",
@@ -34,6 +35,7 @@
     "@storybook/addon-interactions": "^8.2.2",
     "@storybook/addon-links": "^8.2.2",
     "@storybook/addon-svelte-csf": "^4.1.4",
+    "@storybook/addon-styling": "^1.3.7",
     "@storybook/addon-themes": "^8.2.2",
     "@storybook/blocks": "^8.2.2",
     "@storybook/svelte": "^8.2.2",
@@ -81,7 +83,6 @@
     "@jill64/sentry-sveltekit-cloudflare": "^1.7.2",
     "@sentry/browser": "^7.86.0",
     "@sentry/integrations": "^7.94.1",
-    "@storybook/addon-styling": "^1.3.7",
     "jdenticon": "^3.2.0",
     "pako": "^2.1.0",
     "pocketbase": "^0.18.2",
