--- a/package.json
+++ b/package.json
@@ -1,12 +1,15 @@
 {
-  "name": "pokemon-svelte",
+  "name": "pokecompanion",
   "version": "0.0.1",
   "private": true,
   "engines": {
     "node": "18.17.1"
   },
   "scripts": {
+    "d1:local": "wrangler d1 execute pokecompanion_search --local --file=./src/schema.sql",
+    "d1:remote": "wrangler d1 execute pokecompanion_search --remote --file=./src/schema.sql",
     "dev": "vite dev",
+    "dev:cf": "npm run build && wrangler pages dev .svelte-kit/cloudflare --compatibility-date=2024-03-04 --live-reload",
     "build": "npm run build:app",
     "build:assets": "node scripts/socialpreviews/socialGenerator.js",
     "build:app": "vite build",
