--- a/.env.example
+++ b/.env.example
@@ -20,3 +20,5 @@ NEW_RELIC_ACCOUNT_ID=numerical_account_id
 
 # Allow client side code to send server side custom NR events
 PUBLIC_LOGGING_API_KEY=c5afd37d-d17b-4561-8177-0f18fadc01e1
+
+API_HOST="https://api.pokecompanion.com"
