--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
     "check:watch": "svelte-kit sync && svelte-check --tsconfig ./tsconfig.json --watch",
     "lint": "prettier --plugin-search-dir . --check . && eslint .",
     "format": "prettier --plugin-search-dir . --write .",
+    "schema": "npx openapi-typescript https://api.pokecompanion.com/docs/swagger.json -o ./src/@types/api.d.ts",
     "scripts:legends-sprites": "node scripts/manual-sprites/legends-script.js",
     "scripts:swsh-sprites": "node scripts/manual-sprites/swsh-script.js",
     "scripts:sv-sprites": "node scripts/manual-sprites/sv-script.js",
@@ -37,8 +38,8 @@
     "@storybook/addon-essentials": "^8.2.2",
     "@storybook/addon-interactions": "^8.2.2",
     "@storybook/addon-links": "^8.2.2",
-    "@storybook/addon-svelte-csf": "^4.1.4",
     "@storybook/addon-styling": "^1.3.7",
+    "@storybook/addon-svelte-csf": "^4.1.4",
     "@storybook/addon-themes": "^8.2.2",
     "@storybook/blocks": "^8.2.2",
     "@storybook/svelte": "^8.2.2",
@@ -65,6 +66,7 @@
     "lodash-es": "^4.17.21",
     "msw": "^2.2.14",
     "node-fetch": "^3.3.2",
+    "openapi-typescript": "^7.9.1",
     "postcss": "^8.4.28",
     "postcss-nesting": "^12.1.5",
     "prettier": "^2.8.0",
