--- a/package.json
+++ b/package.json
@@ -13,7 +13,7 @@
     "build:assets": "node scripts/socialpreviews/socialGenerator.js",
     "build:app": "vite build",
     "preview": "vite preview",
-    "test": "npm run test:unit",
+    "test": "vitest",
     "check": "svelte-kit sync && svelte-check --tsconfig ./tsconfig.json",
     "check:watch": "svelte-kit sync && svelte-check --tsconfig ./tsconfig.json --watch",
     "lint": "prettier --plugin-search-dir . --check . && eslint .",
@@ -22,28 +22,13 @@
     "schema:local": "npx openapi-typescript http://localhost:3000/docs/swagger.json -o ./src/@types/api.d.ts",
     "scripts:legends-sprites": "node scripts/manual-sprites/legends-script.js",
     "scripts:swsh-sprites": "node scripts/manual-sprites/swsh-script.js",
-    "scripts:sv-sprites": "node scripts/manual-sprites/sv-script.js",
-    "test:unit": "vitest",
-    "test:unit:watch": "vitest --watch",
-    "storybook": "storybook dev -p 6006",
-    "build-storybook": "storybook build"
+    "scripts:sv-sprites": "node scripts/manual-sprites/sv-script.js"
   },
   "dependencies": {
     "uuid": "^9.0.1"
   },
   "devDependencies": {
-    "@chromatic-com/storybook": "^1.6.1",
     "@cloudflare/workers-types": "^4.20240208.0",
-    "@storybook/addon-essentials": "^8.2.2",
-    "@storybook/addon-interactions": "^8.2.2",
-    "@storybook/addon-links": "^8.2.2",
-    "@storybook/addon-styling": "^1.3.7",
-    "@storybook/addon-svelte-csf": "^4.1.4",
-    "@storybook/addon-themes": "^8.2.2",
-    "@storybook/blocks": "^8.2.2",
-    "@storybook/svelte": "^8.2.2",
-    "@storybook/sveltekit": "^8.2.2",
-    "@storybook/test": "^8.2.2",
     "@sveltejs/adapter-cloudflare": "^3.0.1",
     "@sveltejs/adapter-vercel": "^4.0.0",
     "@sveltejs/kit": "^2.5.0",
@@ -56,7 +41,6 @@
     "baseline-browser-mapping": "^2.9.7",
     "eslint": "^8.28.0",
     "eslint-config-prettier": "^8.5.0",
-    "eslint-plugin-storybook": "^0.8.0",
     "eslint-plugin-svelte": "^2.30.0",
     "esm": "^3.2.25",
     "jest-dom": "^4.0.0",
@@ -70,7 +54,6 @@
     "prettier-plugin-svelte": "^2.10.1",
     "save-svg-as-png": "^1.4.17",
     "sharp": "^0.33.2",
-    "storybook": "^8.2.2",
     "svelte": "^4.0.5",
     "svelte-check": "^3.4.3",
     "tailwindcss": "^3.3.3",
