--- a/package.json
+++ b/package.json
@@ -4,8 +4,8 @@
   "private": true,
   "type": "module",
   "engines": {
-    "node": "20.9.0",
-    "npm": "10.1.0"
+    "node": ">=22.0.0",
+    "npm": ">=10.0.0"
   },
   "scripts": {
     "dev": "vite dev",
@@ -16,8 +16,8 @@
     "test": "vitest",
     "check": "svelte-kit sync && svelte-check --tsconfig ./tsconfig.json",
     "check:watch": "svelte-kit sync && svelte-check --tsconfig ./tsconfig.json --watch",
-    "lint": "prettier --plugin-search-dir . --check . && eslint .",
-    "format": "prettier --plugin-search-dir . --write .",
+    "lint": "prettier --check . && eslint .",
+    "format": "prettier --write .",
     "schema": "npx openapi-typescript https://api.pokecompanion.com/docs/swagger.json -o ./src/@types/api.d.ts",
     "schema:local": "npx openapi-typescript http://localhost:3000/docs/swagger.json -o ./src/@types/api.d.ts",
     "scripts:legends-sprites": "node scripts/manual-sprites/legends-script.js",
@@ -25,39 +25,39 @@
     "scripts:sv-sprites": "node scripts/manual-sprites/sv-script.js"
   },
   "devDependencies": {
-    "@cloudflare/workers-types": "^4.20240208.0",
-    "@sveltejs/adapter-cloudflare": "^3.0.1",
-    "@sveltejs/adapter-vercel": "^4.0.0",
-    "@sveltejs/kit": "^2.5.0",
-    "@sveltejs/vite-plugin-svelte": "^3.0.0",
-    "@testing-library/svelte": "^5.1.0",
-    "@types/uuid": "^9.0.7",
-    "@typescript-eslint/eslint-plugin": "^5.45.0",
-    "@typescript-eslint/parser": "^5.45.0",
-    "autoprefixer": "^10.4.15",
-    "baseline-browser-mapping": "^2.9.7",
-    "eslint": "^8.28.0",
-    "eslint-config-prettier": "^8.5.0",
-    "eslint-plugin-svelte": "^2.30.0",
+    "@cloudflare/workers-types": "^4.20251218.0",
+    "@sveltejs/adapter-cloudflare": "^4.9.0",
+    "@sveltejs/adapter-vercel": "^5.10.3",
+    "@sveltejs/kit": "^2.49.2",
+    "@sveltejs/vite-plugin-svelte": "^3.1.2",
+    "@testing-library/svelte": "^5.2.10",
+    "@types/uuid": "^10.0.0",
+    "@typescript-eslint/eslint-plugin": "^7.18.0",
+    "@typescript-eslint/parser": "^7.18.0",
+    "autoprefixer": "^10.4.20",
+    "baseline-browser-mapping": "^2.9.11",
+    "eslint": "^8.57.1",
+    "eslint-config-prettier": "^9.1.0",
+    "eslint-plugin-svelte": "^2.46.1",
     "esm": "^3.2.25",
     "jest-dom": "^4.0.0",
-    "jsdom": "^24.0.0",
-    "msw": "^2.2.14",
+    "jsdom": "^25.0.1",
+    "msw": "^2.7.0",
     "node-fetch": "^3.3.2",
     "openapi-typescript": "^7.9.1",
-    "postcss": "^8.4.28",
-    "postcss-nesting": "^12.1.5",
-    "prettier": "^2.8.0",
-    "prettier-plugin-svelte": "^2.10.1",
+    "postcss": "^8.4.49",
+    "postcss-nesting": "^13.0.2",
+    "prettier": "^3.4.2",
+    "prettier-plugin-svelte": "^3.4.1",
     "save-svg-as-png": "^1.4.17",
-    "sharp": "^0.33.2",
-    "svelte": "^4.0.5",
-    "svelte-check": "^3.4.3",
-    "tailwindcss": "^3.3.3",
-    "ts-node": "^10.9.1",
-    "tslib": "^2.4.1",
-    "typescript": "^5.3.3",
-    "vite": "^5.0.12",
-    "vitest": "^1.0.0"
+    "sharp": "^0.33.5",
+    "svelte": "^4.2.20",
+    "svelte-check": "^4.3.5",
+    "tailwindcss": "^3.4.19",
+    "ts-node": "^10.9.2",
+    "tslib": "^2.8.1",
+    "typescript": "^5.7.3",
+    "vite": "^5.4.21",
+    "vitest": "^2.1.8"
   }
 }
