--- a/package.json
+++ b/package.json
@@ -19,10 +19,7 @@
     "lint": "prettier --check . && eslint .",
     "format": "prettier --write .",
     "schema": "npx openapi-typescript https://api.pokecompanion.com/docs/swagger.json -o ./src/@types/api.d.ts",
-    "schema:local": "npx openapi-typescript http://localhost:3000/docs/swagger.json -o ./src/@types/api.d.ts",
-    "scripts:legends-sprites": "node scripts/manual-sprites/legends-script.js",
-    "scripts:swsh-sprites": "node scripts/manual-sprites/swsh-script.js",
-    "scripts:sv-sprites": "node scripts/manual-sprites/sv-script.js"
+    "schema:local": "npx openapi-typescript http://localhost:3000/docs/swagger.json -o ./src/@types/api.d.ts"
   },
   "devDependencies": {
     "@cloudflare/workers-types": "^4.20251218.0",
